<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.reubens_pc.dmovietime.EditActivity">
    <ScrollView
        android:background="@drawable/theater"
        android:backgroundTintMode="screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/outside"
            android:gravity="top|center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <HorizontalScrollView
                android:gravity="left"
                android:background="@drawable/buttons"
                android:layout_marginTop="15sp"
                android:layout_width="280sp"
                android:layout_height="30sp"
                >
                <EditText
                    android:id="@+id/name"
                    android:background="@color/none"
                    android:layout_width="match_parent"
                    android:layout_height="30sp"
                    android:textColor="@color/white"
                    android:paddingLeft="15sp"
                    android:paddingRight="15sp"
                    android:hint="@string/movie_s_name"
                    android:textColorHint="@color/white"/>
            </HorizontalScrollView>
            <ScrollView

                android:paddingTop="15sp"
                android:background="@drawable/buttons"
                android:layout_marginTop="15sp"
                android:layout_width="280sp"
                android:layout_height="170sp"
                android:gravity="top"
                android:paddingLeft="15sp"
                android:paddingRight="15sp"
                >
                <EditText
                    android:id="@+id/description"
                    android:textColor="@color/white"
                    android:background="@color/none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/movie_s_description"
                    android:textColorHint="@color/white"/>
            </ScrollView>


            <LinearLayout
                android:gravity="left"
                android:background="@drawable/buttons"
                android:layout_marginTop="15sp"
                android:layout_width="300sp"
                android:layout_height="40sp"
                android:orientation="horizontal"
                android:padding="2dp"
                android:layout_gravity="center">
                <Button
                    android:onClick="show"
                    android:textSize="12sp"
                    android:text="@string/show"
                    android:background="@color/colorPrimaryDark"
                    android:layout_width="50sp"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"/>
                <HorizontalScrollView

                    android:layout_width="250sp"
                    android:layout_height="30sp"
                    >

                    <EditText
                        android:id="@+id/url"
                        android:background="@color/none"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/white"
                        android:paddingLeft="15sp"
                        android:paddingRight="15sp"
                        android:hint="@string/movie_s_image_url"
                        android:textColorHint="@color/white"/>
                </HorizontalScrollView>


            </LinearLayout>

            <LinearLayout
                android:gravity="center|top"
                android:layout_marginTop="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/ok"
                    android:onClick="ok"
                    android:background="@drawable/buttons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/ok"/>
                <Button
                    android:onClick="cancel"
                    android:layout_marginStart="15sp"
                    android:background="@drawable/buttons"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"/>

            </LinearLayout>
            <ImageView
                android:id="@+id/imageView"
                android:layout_marginTop="15sp"
                android:background="@color/halfWhite"
                android:layout_width="280sp"
                android:layout_height="145sp"
                android:visibility="visible"/>
            <Button
                android:id="@+id/download"
                android:background="@drawable/buttons"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/dowload_image"
                android:textColor="@color/white"
                android:layout_margin="5dp"
                android:padding="5dp"/>




        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
